hphp/hack/test/typecheck/reactive/test_mutable_return4.php
<?hh // strict

class A {}

<<__MutableReturn>>
function f1(): A {
  return new A();
}
